# SoundScout

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
docs/: SoundVault-Architecture-v0.4.md  SoundVault-ClaudeCode-Plan-v0.5.md  report1_sustained_weapon_looping.md  report2_game_asset_looping_pipeline.md  soundvault_loop_implementation_plan.md
python/: embed_sidecar.py
scripts/: assemble-appdir-for-appimage.sh  build-appimage.fish  build-windows.ps1  embed-env.fish  repair-appdir-for-appimage.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  library_watch.rs  test_utils.rs
src-tauri/src/audio/: cache.rs  clip_wav.rs  decode_core.rs  decoder.rs  mod.rs  pcm_stream.rs  profile.rs  wav_linear.rs
src-tauri/src/audio/loop_proc/: analysis.rs  constants.rs  crossfade.rs  loop_finder.rs  mod.rs  normalize.rs  smpl.rs  spectral.rs  spectral_blend.rs  split_swap.rs  trim.rs
src-tauri/src/commands/: audio.rs  batch.rs  embeddings.rs  indexing.rs  library.rs  mod.rs  search.rs  semantic.rs  state.rs  user_data.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/embedding/: mod.rs  session.rs
src-tauri/src/indexer/: metadata.rs  mod.rs  path_parser.rs  peaks.rs  pipeline.rs  scanner.rs
src-tauri/src/search/: constants.rs  engine.rs  mod.rs  query_builder.rs  text_doc.rs  vector.rs
src-tauri/tests/: playback_profile.rs
(+39 files in other folders)
